<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/_6sdp"
    android:layout_marginVertical="@dimen/_6sdp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvMoviesListItem"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/_15sdp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivMoviesListItem"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200sdp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/movies_list_item_title" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/black_transparent"
            app:cardCornerRadius="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/tvMovieListItemRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_6sdp"
                android:drawablePadding="@dimen/_2sdp"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_6sdp"
                android:text="@string/movies_list_item_rating"
                android:textColor="@color/white"
                app:drawableStartCompat="@drawable/ic_movi_rating"
                app:drawableTint="@color/white" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tvMoviesListItemTitle"
        style="@style/SmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/movies_list_item_title"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvMoviesListItemYear"
        style="@style/SmallText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/movies_list_item_year" />

</androidx.appcompat.widget.LinearLayoutCompat>