<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_6sdp"
    android:layout_marginBottom="@dimen/_6sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clMovieDetailReviewData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivMovieDetailReviewUsername"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:src="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ImageRounded" />

        <TextView
            android:id="@+id/tvMovieDetailReviewUsername"
            style="@style/ContentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/movie_reviews_user_name"
            app:layout_constraintBottom_toBottomOf="@+id/ivMovieDetailReviewUsername"
            app:layout_constraintStart_toEndOf="@+id/ivMovieDetailReviewUsername"
            app:layout_constraintTop_toTopOf="@+id/ivMovieDetailReviewUsername" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvMovieDetailReviewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_6sdp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/ivMovieDetailReviewUsername"
            app:layout_constraintStart_toEndOf="@+id/tvMovieDetailReviewUsername"
            app:layout_constraintTop_toTopOf="@+id/ivMovieDetailReviewUsername">


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_4sdp"
                android:paddingVertical="@dimen/_2sdp">

                <ImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:background="@drawable/ic_movi_rating"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/movie_reviews_user_name" />

                <TextView
                    android:id="@+id/tvMovieDetailReviewRating"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_2sdp"
                    android:gravity="center"
                    android:text="@string/movie_reviews_rating"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_8ssp" />

            </androidx.appcompat.widget.LinearLayoutCompat>


        </com.google.android.material.card.MaterialCardView>

        <View
            android:id="@+id/lineSeparator"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_marginHorizontal="@dimen/_3sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/grey_disabled"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivMovieDetailReviewUsername" />

        <TextView
            android:id="@+id/tvMovieDetailReviewText"
            style="@style/SmallText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/lorem_ipsum"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineSeparator" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>